--- a/assets/css/styles-1.css
+++ b/assets/css/styles-1.css
@@ -10,7 +10,7 @@
 /* ======= Base ======= */
 body {
   font-family: -apple-system,BlinkMacSystemFont,Helvetica Neue,PingFang SC,Microsoft YaHei,Source Han Sans SC,Noto Sans CJK SC,WenQuanYi Micro Hei,sans-serif;
-  color: #555555;
+  color: #545E6C;
   background: #f5f5f5;
   font-size: 14px;
   padding: 30px;
@@ -30,31 +30,25 @@ h5,
 h6 {
   font-weight: 700;
 }
-a, a:focus, a:active {
-  color: #555555;
-  text-decoration: none;
-  outline: none;
-  border-bottom: 1px solid #999999;
-  word-wrap: break-word;
-  /*-webkit-transition: all 0.4s ease-in-out;
+a {
+  color: #35776d;
+  -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
   -ms-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;*/
+  -o-transition: all 0.4s ease-in-out;
 }
 a:hover {
-  color: #222222;
-  border-bottom-color: #222222;
-  text-decoration: none;
+  text-decoration: underline;
+  color: #1d423c;
 }
-::selection {
-    background: #262a30;
-    color: #fff;
+a:focus {
+  text-decoration: none;
 }
 p {
   line-height: 1.5;
 }
 .wrapper {
-  background: #3F3F3F;
+  background: #4CAC9D;
   max-width: 1024px;
   margin: 0 auto;
   position: relative;
@@ -63,7 +57,7 @@ p {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 .sidebar-wrapper {
-  background: #3F3F3F;
+  background: #4CAC9D;
   position: absolute;
   left: 0;
   width: 250px;
@@ -76,7 +70,7 @@ p {
 }
 .sidebar-wrapper .profile-container {
   padding: 60px 40px;
-  background: #222222;
+  background: rgba(0, 0, 0, 0.2);
   text-align: center;
   color: #fff;
 }
@@ -87,7 +81,7 @@ p {
   margin-bottom: 0;
 }
 .sidebar-wrapper .tagline {
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.6);
   font-size: 16px;
   font-weight: 400;
   margin-top: 40px;
@@ -136,7 +130,7 @@ p {
   text-transform: uppercase;
   font-size: 20px;
   font-weight: 700;
-  color: #555555;
+  color: #35776d;
   position: relative;
   margin-top: 0;
   margin-bottom: 20px;
@@ -155,7 +149,7 @@ p {
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
-  background: #555555;
+  background: #35776d;
   text-align: center;
   padding-top: 8px;
   font-size: 16px;
@@ -186,11 +180,11 @@ p {
   position: absolute;
   right: 0;
   top: 0;
-  color: #999999;
+  color: #97AAC3;
 }
 .main-wrapper .company {
   margin-bottom: 10px;
-  color: #999999;
+  color: #97AAC3;
 }
 .main-wrapper .project-title {
   font-size: 16px;
@@ -208,11 +202,11 @@ p {
 }
 .skillset .level-bar {
   height: 12px;
-  background: #EEEEEE;
+  background: #f5f5f5;
 }
 .skillset .level-bar-inner {
   height: 12px;
-  background: #555;
+  background: #7ec6bb;
 }
 .footer {
   padding: 30px;
@@ -220,7 +214,7 @@ p {
 }
 .footer .copyright {
   line-height: 1.6;
-  color: #555555;
+  color: #545E6C;
   font-size: 13px;
 }
 .footer .fa-heart {
